--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1909,11 +1909,19 @@ while (T > 0) {
 
 
 
+
+
+
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
+
+
+
 
 
 
@@ -2903,4 +2911,203 @@ function solution(edges, N, startID, endID, TTL) {
 
 
 ----
+
+## 9.17 度小满面试
+
+第一题
+
+给你一个整数数组 nums ，判断是否存在三元组 [nums[i], nums[j], nums[k]] 满足 i != j、i != k 且 j != k ，同时还满足 nums[i] + nums[j] + nums[k] == 0 。请
+
+你返回所有和为 0 且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+
+
+```js
+function threeNumberSum(nums){
+	nums=nums.sort((a,b)=>a-b);  //排序
+	let n=nums.length;
+	const ans=[];
+	let sum=0;
+	//枚举第一个数字
+	for (let first=0; first<n; first++){
+		// 需要和上一次枚举的数不相同
+		if (nums[first]>0) {
+			//first元素大于0后，后面sum不可能等于0
+			break;
+		}
+		if (first>0 && nums[first]===nums[first-1]){
+			continue;
+		}
+		//第三个数对应的指针初始指向数组的最右端
+		let third=n-1;
+		let target=-nums[first];
+		for (let second=first+1; second<n; second++){
+			if (nums[second] > target) {
+				//前两个元素和已经大于0，则再加第三个一定大于0;
+				break;
+			}
+			// 需要和上一次枚举的数不相同
+			if (second>first+1 && nums[second]===nums[second-1]) {
+				continue;
+			}
+			// 需要保证 second 的指针在 third 的指针的左侧
+			while(second<third && nums[second]+nums[third]>target){
+				third--;
+			}
+			// 如果指针重合，随着 second 后续的增加
+			// 就不会有满足 a+b+c=0 并且 b<c 的 c 了，可以退出循环
+			if (second===third) {
+				break;
+			}
+			if (nums[second]+nums[third]===target) {
+				ans.push([nums[first],nums[second],nums[third]]);
+			}
+		}
+	}
+	return ans;
+}
+
+let test=[-1, 0, 1, 2, -1, -4];
+console.log(threeNumberSum(test));  // [ [ -1, -1, 2 ], [ -1, 0, 1 ] ]
+```
+
+
+
+第二题
+
+ 把数字翻译成字符串
+
+给定一个数字，我们按照如下规则把它翻译为字符串：0 翻译成 “a” ，1 翻译成 “b”，……，11 翻译成 “l”，……，25 翻译成 “z”。一个数字可能有多个翻译。请编程实现一个函数，用来计算一个数字有多少种不同的翻译方法。
+
+ 
+
+```js
+/**
+ * @param {number} num
+ * @return {number}
+ */
+var translateNum = function(num) {
+    num = num.toString();
+    let p = 0, q = 0, r = 1;
+    let n = num.length;
+    for (let i = 0; i < n; i++) {
+        p = q;
+        q = r;
+        r = q;
+        if (i === 0) {
+            continue;
+        }
+        let pre = num.substring(i - 1, i + 1);
+        if (num[i - 1] !== "0" && Number(pre) < 26 && Number(pre) >= 0) {
+            // 注意前一位0的情况
+            r += p;
+        }
+    }
+    return r;
+};
+
+let num = 12258;
+console.log(translateNum(num));
+```
+
+
+
+js异步题
+
+```
+function fn1(value) {
+    setTimeout(() => {
+        value = value + 2;
+    }, 0);
+    return value;
+}
+
+function fn2(value) {
+    setTimeout(() => {
+        return value + 3;
+    }, 0);
+}
+function fn3(value) {
+    setTimeout(() => {
+        value = value * 2;
+    }, 0);
+}
+
+function callback(value) {
+    console.log(value);
+}
+
+function run(initValue, fnArr, callback) {
+    const n = fnArr.length;
+    let result = initValue;
+    
+    async function fn() {
+        for (let i = 0; i < n - 1; i++) {
+            result = await fnArr[i](result);
+        }
+    }
+    fn();
+    callback(result);
+}
+
+const fnArr = [fn1, fn2, fn3];
+const initValue = 1;
+
+run(initValue, fnArr, callback);
+```
+
+curry化函数
+
+```js
+function curry(func) {
+    return function curried(...args) {
+        if (args.length >= func.length) {
+            return func.apply(this, args);
+        } else {
+            return function(...args2) {
+                return curried.apply(this, args.concat(args2));
+            }
+        }
+    }
+}
+
+function sum(a, b, c) {
+  return a + b + c;
+}
+
+let curriedSum = curry(sum);
+
+console.log(curriedSum(1, 2, 3));
+console.log(curriedSum(1, 2)(3));
+console.log(curriedSum(1)(2)(3));
+```
+
+
+
+第五题
+
+实现pow(x, n)
+
+```js
+/**
+ * @param {number} x
+ * @param {number} n
+ * @return {number}
+ */
+var myPow = function(x, n) {
+    return n >= 0 ? quickMul(x, n) : 1 / quickMul(x, -n);
+};
+
+const quickMul = (x, n) => {
+    if (n === 0) {
+        return 1;
+    }
+    let y = quickMul(x, n >> 1);
+    return n % 2 === 0 ? y * y : y * y * x;
+}
+
+console.log(myPow(3, -3));
+```
 
