--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3013,6 +3013,70 @@ console.log(permute(nums));
 
 ----
 
+## 50. Pow(x, n)
+
+实现 [pow(*x*, *n*)](https://www.cplusplus.com/reference/valarray/pow/) ，即计算 `x` 的整数 `n` 次幂函数（即，`xn` ）。
+
+#### 快速幂 + 递归
+
+```js
+/**
+ * @param {number} x
+ * @param {number} n
+ * @return {number}
+ */
+var myPow = function(x, n) {
+    return n >= 0 ? quickMul(x, n) : 1 / quickMul(x, -n);
+};
+
+const quickMul = (x, n) => {
+    if (n === 0) {
+        return 1;
+    }
+    let y = quickMul(x, n >> 1);
+    return n % 2 === 0 ? y * y : y * y * x;
+}
+
+console.log(myPow(3, -3));
+```
+
+#### 快速幂 + 迭代
+
+```js
+/**
+ * @param {number} x
+ * @param {number} n
+ * @return {number}
+ */
+var myPow = function(x, n) {
+    return n >= 0 ? quickMul(x, n) : 1 / quickMul(x, -n);
+};
+
+const quickMul = (x, n) => {
+    let ans = 1;
+    // 贡献的初始值为 x
+    let x_contribute = x;
+    // 在对 N 进行二进制拆分的同时计算答案
+    while (n > 0) {
+        if (n % 2 === 1) {
+            // 如果 N 二进制表示的最低位为 1，那么需要计入贡献
+            ans *= x_contribute;
+        }
+        // 将贡献不断地平方
+        x_contribute *= x_contribute;
+        // 舍弃 N 二进制表示的最低位，这样我们每次只要判断最低位即可
+        n >>>= 1;  //进行无符号右移1位，此处不能使用有符号右移（>>）
+    }
+    return ans;
+}
+
+console.log(myPow(2, -2147483648));
+```
+
+
+
+----
+
 ## 53. 最大子数组和
 
 给你一个整数数组 nums ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
