--- a/面试学习题目/前端面试_10_前端数据请求.md
+++ b/面试学习题目/前端面试_10_前端数据请求.md
@@ -1211,3 +1211,33 @@ const securityAdapter = axios.create({
 方法二，过于繁所；
 方法三，需要修改现有的代码；
 方法四，暂时来看是最合适的
+
+
+
+-----
+
+##  restful 接口规范是什么？
+
+REST，全称 Representational State Transfer（表现层状态转化），由 [Roy Thomas Fielding](http://en.wikipedia.org/wiki/Roy_Fielding) 在他2000年的 [博士论文](http://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm) 中提出的，是一种被广泛使用的 API 架构风格。
+
+### 资源 Resource
+
+在REST API的设计中，首先需要面向资源进行建模，其中每个节点是一个“简单资源”或“集合资源”。 为方便起见，它们通常被分别称为资源和集合。
+
+1. 一个集合包含**相同类型**的资源列表。 例如，一个用户拥有一组联系人。
+2. 资源具有状态，以及零个或多个子资源。 每个子资源可以是一个简单资源或一个集合资源。
+
+### 方法 Method
+
+每个资源都会对应一组操作方法，用户通过 API 来完成对应的操作（使用HTTP Method），常见的操作方法如下：
+
+| 操作类型     | HTTP 映射             | 举例                                                    |
+| ------------ | --------------------- | ------------------------------------------------------- |
+| 获取资源集合 | GET <collection URL>  | curl -X GET https://foo.bar.com/api/v1/customers        |
+| 获取单个资源 | GET <resource URL>    | curl -X GET https://foo.bar.com/api/v1/customers/123    |
+| 创建资源     | POST <collection URL> | curl -X POST https://foo.bar.com/api/v1/customers       |
+| 更新资源     | PUT <resource URL>    | curl -X PUT https://foo.bar.com/api/v1/customers/123    |
+| 局部更新资源 | PATCH <resource URL>  | curl -X PATCH https://foo.bar.com/api/v1/customers/123  |
+| 删除资源     | DELETE <resource URL> | curl -X DELETE https://foo.bar.com/api/v1/customers/123 |
+
+*其中：POST/PUT 与 PATCH的区别在于全部更新，还是局部信息的更新，POST/PUT为该资源的所有字段均被更新或者覆盖。*
