--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1913,11 +1913,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -3110,4 +3112,82 @@ const quickMul = (x, n) => {
 
 console.log(myPow(3, -3));
 ```
+
+
+
+---
+
+9.18 富途笔试
+
+最大异或值
+
+```js
+function solution(a, b) {
+    let ans = a;
+    for (let i = 0; i <= b; i++) {
+        ans = Math.max(ans, a ^ i);
+    }
+    return ans;
+}
+
+// console.log(solution(3, 6));
+let [a, b] = readline().trim().split(" ").map(Number);
+console.log(solution(a, b));
+
+```
+
+数字分割
+
+给定一个n位的正整数，如1234，可以任意分割，但顺序不变，分割数字后对分得到的数求和，问求和的结果共有多少种
+
+1234 可以分割为
+
+```
+1 2 3 4 = 10
+1 2 34 = 37
+1 23 4 = 28
+1 234 = 235
+
+12 3 4 = 19
+12 34 = 36
+
+123 4 = 127
+
+1234 = 1234
+
+```
+
+共有8种
+
+
+
+```
+
+
+function solution(num) {
+    num = "" + num;
+    const sums = new Set();
+    const n = num.length;
+    if (n < 3) {
+        return n;
+    }
+    // for (let i = 0; i < n; i++) {
+    //     
+    // }
+    const backtrack = (num, i) => {
+
+    }
+
+    return 3;
+}
+
+
+// console.log(solution(12345));
+let n = parseInt(readline().trim());
+console.log(solution(n));
+```
+
+
+
+----
 
