--- a/面试学习题目/重难点内容/异步类题目.md
+++ b/面试学习题目/重难点内容/异步类题目.md
@@ -414,3 +414,485 @@ promise2 Promise { <rejected>: Error: error!!! }
 ----
 
 ## Promise中的then、catch、finally
+
+**总结：**
+
+1. `Promise`的状态一经改变就不能再改变。
+2. `.then`和`.catch`都会返回一个新的`Promise`。
+3. `catch`不管被连接到哪里，都能捕获上层未捕捉过的错误。
+4. 在`Promise`中，返回任意一个非 `promise` 的值都会被包裹成 `promise` 对象，例如`return 2`会被包装为`return Promise.resolve(2)`。
+5. `Promise` 的 `.then` 或者 `.catch` 可以被调用多次, 但如果`Promise`内部的状态一经改变，并且有了一个值，那么后续每次调用`.then`或者`.catch`的时候都会直接拿到该值。
+6. `.then` 或者 `.catch` 中 `return` 一个 `error` 对象**并不会抛出错误**，所以不会被后续的 `.catch` 捕获。
+7. `.then` 或 `.catch` **返回的值不能是 promise 本身**，否则会造成死循环。
+8. `.then` 或者 `.catch` 的参数期望是函数，**传入非函数则会发生值透传**。
+9. `.then`方法是能接收两个参数的，第一个是处理成功的函数，第二个是处理失败的函数，**在某些时候你可以认为`catch`是`.then`第二个参数的简便写法**。
+10. `.finally`方法也是返回一个`Promise`，在`Promise`结束的时候，无论结果为`resolved`还是`rejected`，都会执行里面的回调函数。
+
+
+
+```js
+const promise = new Promise((resolve, reject) => {
+  resolve("success1");
+  reject("error");
+  resolve("success2");
+});
+
+promise
+.then(res => {
+    console.log("then: ", res);
+  }).catch(err => {
+    console.log("catch: ", err);
+  })
+
+/*
+then:  success1
+*/
+```
+
+构造函数中的 `resolve` 或 `reject` 只有第一次执行有效，多次调用没有任何作用 。验证了第一个结论，`Promise`的状态一经改变就不能再改变。
+
+----
+
+```js
+const promise = new Promise((resolve, reject) => {
+  reject("error");
+  resolve("success2");
+});
+promise.then(res => {
+    console.log("then1: ", res);
+  }).then(res => {
+    console.log("then2: ", res);
+  }).catch(err => {
+    console.log("catch: ", err);
+  }).then(res => {
+    console.log("then3: ", res);
+  })
+
+/*
+catch:  error
+then3:  undefined
+*/
+```
+
+验证了第三个结论，`catch`不管被连接到哪里，都能捕获上层未捕捉过的错误。
+
+至于`then3`也会被执行，那是因为`catch()`也会返回一个`Promise`，且由于这个`Promise`没有返回值，所以打印出来的是`undefined`。
+
+----
+
+```js
+Promise.resolve(1)
+  .then(res => {
+    console.log(res);
+    return 2;
+  })
+  .catch(err => {
+    return 3;
+  })
+  .then(res => {
+    console.log(res);
+  });
+
+/*
+1
+2
+*/
+```
+
+`Promise`可以链式调用，不过`promise` 每次调用 `.then` 或者 `.catch` 都会返回一个新的 `promise`，从而实现了链式调用, 它并不像一般我们任务的链式调用一样`return this`。
+
+上面的输出结果之所以依次打印出`1`和`2`，那是因为`resolve(1)`之后走的是第一个`then`方法，并没有走`catch`里，**所以第二个`then`中的`res`得到的实际上是第一个`then`的返回值。**
+
+且`return 2`会被包装成`resolve(2)`。
+
+----
+
+```js
+Promise.reject(1)
+  .then(res => {
+    console.log(res);
+    return 2;
+  })
+  .catch(err => {
+    console.log(err);
+    return 3
+  })
+  .then(res => {
+    console.log(res);
+  });
+
+/*
+1
+3
+*/
+```
+
+结果打印的是 `1 和 3`，因为`reject(1)`此时走的就是`catch`，且第二个`then`中的`res`得到的就是`catch`中的返回值。
+
+----
+
+```js
+const promise = new Promise((resolve, reject) => {
+  setTimeout(() => {
+    console.log('timer')
+    resolve('success')
+  }, 1000)
+})
+
+const start = Date.now();
+promise.then(res => {
+  console.log(res, Date.now() - start)
+})
+
+promise.then(res => {
+  console.log(res, Date.now() - start)
+})
+
+/*
+timer
+success 1027
+success 1029
+*/
+```
+
+`Promise` 的 `.then` 或者 `.catch` 可以被调用多次，但这里 `Promise` 构造函数只执行一次。或者说 `promise` 内部状态一经改变，并且有了一个值，那么后续每次调用 `.then` 或者 `.catch` 都会直接拿到该值。
+
+----
+
+```js
+Promise.resolve().then(() => {
+  return new Error('error!!!')
+}).then(res => {
+  console.log("then: ", res)
+}).catch(err => {
+  console.log("catch: ", err)
+})
+
+/*
+then:  Error: error!!!
+*/
+```
+
+你可能想到的是进入`.catch`然后被捕获了错误。
+
+结果并不是这样的，它走的是`.then`里面：
+
+```arduino
+"then: " "Error: error!!!"
+```
+
+这也验证了第4点和第6点，返回任意一个非 `promise` 的值都会被包裹成 `promise` 对象，因此这里的`return new Error('error!!!')`也被包裹成了`return Promise.resolve(new Error('error!!!'))`。
+
+当然如果你抛出一个错误的话，可以用下面两的任意一种：
+
+```javascript
+return Promise.reject(new Error('error!!!'));
+// or
+throw new Error('error!!!')
+```
+
+
+
+----
+
+```js
+const promise = Promise.resolve().then(() => {
+  return promise;
+})
+promise.catch(console.err)
+
+/*
+[TypeError: Chaining cycle detected for promise #<Promise>]
+*/
+```
+
+`.then` 或 `.catch` 返回的值不能是 promise 本身，否则会造成死循环。
+
+
+
+----
+
+```js
+Promise.resolve(1)
+  .then(2)
+  .then(Promise.resolve(3))
+  .then(console.log)
+
+/*
+1
+*/
+```
+
+其实你只要记住**原则8**：`.then` 或者 `.catch` 的参数期望是函数，**传入非函数则会发生值透传**。
+
+第一个`then`和第二个`then`中传入的都不是函数，一个是数字类型，一个是对象类型，**因此发生了透传，将`resolve(1)` 的值直接传到最后一个`then`里。**
+
+
+
+----
+
+```js
+Promise.reject('err!!!')
+  .then((res) => {
+    console.log('success', res)
+  }, (err) => {
+    console.log('error', err)
+  }).catch(err => {
+    console.log('catch', err)
+  })
+/*
+error err!!!
+*/
+```
+
+它进入的是`then()`中的第二个参数里面，而如果把第二个参数去掉，就进入了`catch()`中
+
+```js
+Promise.reject('err!!!')
+  .then((res) => {
+    console.log('success', res)
+  }).catch(err => {
+    console.log('catch', err)
+  })
+/*
+catch err!!!
+*/
+```
+
+
+
+----
+
+```js
+Promise.resolve()
+  .then(function success (res) {
+    throw new Error('error!!!')
+  }, function fail1 (err) {
+    console.log('fail1', err)
+  }).catch(function fail2 (err) {
+    console.log('fail2', err)
+  })
+/*
+fail2 Error: error!!!
+*/
+```
+
+由于`Promise`调用的是`resolve()`，因此`.then()`执行的应该是`success()`函数，**可是`success()`函数抛出的是一个错误，它会被后面的`catch()`给捕获到**，而不是被`fail1`函数捕获。
+
+
+
+---
+
+
+
+看看`.finally()`，记住它三个很重要的知识点就可以：
+
+1. `.finally()`方法不管`Promise`对象最后的状态如何都会执行
+2. `.finally()`**方法的回调函数不接受任何的参数**，也就是说你在`.finally()`函数中是没法知道`Promise`最终的状态是`resolved`还是`rejected`的
+3. 它**最终返回的默认会是一个上一次的Promise对象值**，不过如果抛出的是一个异常则返回异常的`Promise`对象。
+
+```js
+Promise.resolve('1')
+  .then(res => {
+    console.log(res)
+  })
+  .finally(() => {
+    console.log('finally')
+  })
+  
+Promise.resolve('2')
+  .finally(() => {
+    console.log('finally2')
+    return '我是finally2返回的值'
+  })
+  .then(res => {
+    console.log('finally2后面的then函数', res)
+  })
+/*
+1
+finally2
+finally
+finally2后面的then函数 2
+*/
+```
+
+这两个`Promise`的`.finally`都会执行，且就算`finally2`返回了新的值，它后面的`then()`函数接收到的结果却还是`'2'`
+
+为什么`finally2`的打印要在`finally`前面
+
+
+
+```js
+Promise.resolve('1')
+  .finally(() => {
+    console.log('finally1')
+    throw new Error('我是finally中抛出的异常')
+  })
+  .then(res => {
+    console.log('finally后面的then函数', res)
+  })
+  .catch(err => {
+    console.log('捕获错误', err)
+  })
+/*
+finally1
+捕获错误 Error: 我是finally中抛出的异常
+*/
+```
+
+如果改为`return new Error('我是finally中抛出的异常')`，打印出来的就是`'finally后面的then函数 1'`
+
+```js
+Promise.resolve('1')
+  .finally(() => {
+    console.log('finally1')
+    return new Error('我是finally中抛出的异常')
+  })
+  .then(res => {
+    console.log('finally后面的then函数', res)
+  })
+  .catch(err => {
+    console.log('捕获错误', err)
+  })
+/*
+finally1
+finally后面的then函数 1
+*/
+```
+
+
+
+----
+
+```js
+function promise1 () {
+  let p = new Promise((resolve) => {
+    console.log('promise1');
+    resolve('1')
+  })
+  return p;
+}
+function promise2 () {
+  return new Promise((resolve, reject) => {
+    reject('error')
+  })
+}
+
+promise1()
+  .then(res => console.log(res))
+  .catch(err => console.log(err))
+  .finally(() => console.log('finally1'))
+
+promise2()
+  .then(res => console.log(res))
+  .catch(err => console.log(err))
+  .finally(() => console.log('finally2'))
+/*
+promise1
+1
+error
+finally1
+finally2
+*/
+```
+
+执行过程：
+
+- 首先定义了两个函数`promise1`和`promise2`，先不管接着往下看。
+- `promise1`函数先被调用了，然后执行里面`new Promise`的同步代码打印出`promise1`
+- 之后遇到了`resolve(1)`，将`p`的状态改为了`resolved`并将结果保存下来。
+- 此时`promise1`内的函数内容已经执行完了，跳出该函数
+- 碰到了`promise1().then()`，由于`promise1`的状态已经发生了改变且为`resolved`因此将`promise1().then()`这条微任务加入本轮的微任务列表(**这是第一个微任务**)
+- 这时候要注意了，代码并不会接着往链式调用的下面走，也就是不会先将`.finally`加入微任务列表，**那是因为`.then`本身就是一个微任务，它链式后面的内容必须得等当前这个微任务执行完才会执行**，因此这里我们先不管`.finally()`
+- 再往下走碰到了`promise2()`函数，其中返回的`new Promise`中并没有同步代码需要执行，**所以执行`reject('error')`的时候将`promise2`函数中的`Promise`的状态变为了`rejected`**
+- 跳出`promise2`函数，遇到了`promise2().catch()`，将其加入当前的微任务队列(**这是第二个微任务**)，且链式调用后面的内容得等该任务执行完后才执行，和`.then()`一样。
+- OK， 本轮的宏任务全部执行完了，来看看微任务列表，存在`promise1().then()`，执行它，打印出`1`，然后遇到了`.finally()`这个微任务将它加入微任务列表(**这是第三个微任务**)等待执行
+- 再执行`promise2().catch()`打印出`error`，执行完后将`finally2`加入微任务加入微任务列表(**这是第四个微任务**)
+- OK， 本轮又全部执行完了，但是微任务列表还有两个新的微任务没有执行完，因此依次执行`finally1`和`finally2`。
+
+
+
+可以理解为**链式调用**后面的内容需要等前一个调用执行完才会执行。
+
+就像是这里的`finally()`会等`promise1().then()`执行完才会将`finally()`加入微任务队列，其实如果这道题中你把`finally()`换成是`then()`也是这样的
+
+```js
+function promise1 () {
+  let p = new Promise((resolve) => {
+    console.log('promise1');
+    resolve('1')
+  })
+  return p;
+}
+function promise2 () {
+  return new Promise((resolve, reject) => {
+    reject('error')
+  })
+}
+promise1()
+  .then(res => console.log(res))
+  .catch(err => console.log(err))
+  .then(() => console.log('finally1'))
+
+promise2()
+  .then(res => console.log(res))
+  .catch(err => console.log(err))
+  .then(() => console.log('finally2'))
+/*
+promise1
+1
+error
+finally1
+finally2
+*/
+```
+
+
+
+---
+
+## Promise中的all和race
+
+通俗来说，`.all()`的作用是接收一组异步任务，然后并行执行异步任务，并且在所有异步操作执行完后才执行回调。
+
+`.race()`的作用也是接收一组异步任务，然后并行执行异步任务，只保留取第一个执行完成的异步操作的结果，其他的方法仍在执行，不过执行结果会被抛弃。
+
+
+
+我们知道如果直接在脚本文件中定义一个`Promise`，它构造函数的第一个参数是会立即执行的，就像这样：
+
+```javascript
+const p1 = new Promise(r => console.log('立即打印'))
+```
+
+控制台中会立即打印出 “立即打印”。
+
+因此为了控制它什么时候执行，我们可以用一个函数包裹着它，在需要它执行的时候，调用这个函数就可以了：
+
+```javascript
+function runP1 () {
+    const p1 = new Promise(r => console.log('立即打印'))
+    return p1
+}
+
+runP1() // 调用此函数时才执行
+```
+
+现在来构建这么一个函数：
+
+```javascript
+function runAsync (x) {
+    const p = new Promise(r => setTimeout(() => r(x, console.log(x)), 1000))
+    return p
+}
+
+runAsync(2);
+/*
+2
+*/
+```
+
+该函数传入一个值`x`，然后间隔一秒后打印出这个`x`。
+
+
+如果我用`.all()`来执行它会怎样呢？
