--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -3161,9 +3161,7 @@ console.log(solution(a, b));
 
 
 
-```
-
-
+```js
 function solution(num) {
     num = "" + num;
     const sums = new Set();
@@ -3171,20 +3169,25 @@ function solution(num) {
     if (n < 3) {
         return n;
     }
-    // for (let i = 0; i < n; i++) {
-    //     
-    // }
-    const backtrack = (num, i) => {
-
+    const backtrack = (sum, startIndex) => {
+        // console.log(startIndex);
+        if (startIndex === n) {
+            sums.add(sum);
+            return;
+        }
+        for (let j = startIndex; j < n; j++) {
+            backtrack(sum + Number(num.slice(startIndex, j + 1)), j + 1);
+        }
     }
 
-    return 3;
+    for (let i = 0; i < n; i++) {
+        backtrack(Number(num.slice(0, i + 1)), i + 1);
+    }
+
+    return sums.size;
 }
 
-
-// console.log(solution(12345));
-let n = parseInt(readline().trim());
-console.log(solution(n));
+console.log(solution(1234567890));
 ```
 
 
