--- a/数据结构与算法/排序算法.md
+++ b/数据结构与算法/排序算法.md
@@ -350,6 +350,33 @@ console.log(result);
 ### 3.JavaScript 代码实现
 
 ```js
+var a = [ 25, 76, 34, 232, 6, 456, 221];
+function quickSort(array) {
+  var quick = function(arr) {
+    if (arr.length <= 1) return arr
+    const index = Math.floor(len >> 1)
+    const pivot = arr.splice(index, 1)[0]
+    const left = []
+    const right = []
+    for (let i = 0; i < arr.length; i++) {
+      if (arr[i] > pivot) {
+        right.push(arr[i])
+      } else if (arr[i] <= pivot) {
+        left.push(arr[i])
+      }
+    }
+    return quick(left).concat([pivot], quick(right))
+  }
+  const result = quick(array)
+  return result
+
+}
+quickSort(a);//  [ 6, 25, 34, 76, 221, 232, 456]
+```
+
+
+
+```js
 function quickSort(arr,left,right){
     //快速排序
     let n=arr.length;
