--- a/面试学习题目/前端面试_12_算法与手写题部分.md
+++ b/面试学习题目/前端面试_12_算法与手写题部分.md
@@ -2129,3 +2129,158 @@ function ChineseToNumber(chnStr){
 
 -----
 
+##  写一个 repeat 方法，实现字符串的复制拼接
+
+空数组 join
+
+```js
+function repeat(target, n) {
+    return (new Array(n + 1)).join(target);
+}
+
+console.log(repeat("a", 10)); 
+```
+
+改良方法1，省去创建数组这一步，提高性能。之所以创建一个带 length 属性的对象，是因为要调用数组的原型方法，需要指定 call 第一个参数为类数组对象。
+
+```js
+function repeat(target, n) {
+    return Array.prototype.join.call({
+        length: n + 1
+    }, target);
+}
+
+console.log(repeat("a", 10)); 
+```
+
+改良方法 2，利用闭包缓存 join，避免重复创建对象、寻找方法。
+
+```js
+var repeat = (function () {
+  var join = Array.prototype.join, obj = {};
+  return function(target, n) {
+    obj.length = n + 1;
+    return join.call(obj, target);
+  };
+})();
+```
+
+使用二分法，减少操作次数
+
+```js
+function repeat(target, n) {
+    let s = target, total = [];
+    while (n > 0) {
+        if (n % 2 === 1) {
+            total[total.length] = s;
+        }
+        // console.log(total);
+        if (n === 1) {
+            break;
+        }
+        s += s;
+        n >>>= 1;
+    }
+    return total.join("")
+}
+
+console.log(repeat("a", 10)); 
+```
+
+方法 4 的变种，免去创建数组与使用 join。缺点是循环中创建的字符串比要求的长。
+
+```js
+function repeat(target, n) {
+  var s = target, c = s.length * n;
+  do {
+    s += s;
+  } while (n = n >> 1)
+  s = s.substring(0, c);
+  return s;
+}
+```
+
+方法 4 的改良。
+
+```js
+function repeat(target, n) {
+  var s = target, total = "";
+  while (n > 0) {
+    if (n % 2 === 1) {
+      total += s;
+    }
+    if (n === 1) {
+      break;
+    }
+    s += s;
+    n = n >> 1;
+  }
+  return total;
+}
+```
+
+
+
+ MDN 中的`String.prototype.repeat`的 polyfill 方法
+
+```js
+if (!String.prototype.repeat) {
+  String.prototype.repeat = function(count) {
+    'use strict';
+    if (this == null)
+      throw new TypeError('can\'t convert ' + this + ' to object');
+
+    var str = '' + this;
+    // To convert string to integer.
+    count = +count;
+    // Check NaN
+    if (count != count)
+      count = 0;
+
+    if (count < 0)
+      throw new RangeError('repeat count must be non-negative');
+
+    if (count == Infinity)
+      throw new RangeError('repeat count must be less than infinity');
+
+    count = Math.floor(count);
+    if (str.length == 0 || count == 0)
+      return '';
+
+    // Ensuring count is a 31-bit integer allows us to heavily optimize the
+    // main part. But anyway, most current (August 2014) browsers can't handle
+    // strings 1 << 28 chars or longer, so:
+    if (str.length * count >= 1 << 28)
+      throw new RangeError('repeat count must not overflow maximum string size');
+
+    var maxCount = str.length * count;
+    count = Math.floor(Math.log(count) / Math.log(2));
+    while (count) {
+       str += str;
+       count--;
+    }
+    str += str.substring(0, maxCount - str.length);
+    return str;
+  }
+}
+```
+
+
+
+---
+
+##  使用js生成1-10000的数组
+
+除了使用循环（for,while,forEach等）外，最简单的是使用`Array.from`
+
+```js
+// 方法一
+Array.from(new Array(10001).keys()).slice(1)
+
+// 方法二
+Array.from({length:10000},(node,i)=> i+1)
+
+// 方法三
+new Array(10000).fill(0).map((item, index) => index + 1);
+```
+
