--- a/面试学习题目/前端面试_16_前端安全部分.md
+++ b/面试学习题目/前端面试_16_前端安全部分.md
@@ -80,6 +80,21 @@
 
 
 
+#### 常见跨域场景
+
+当协议、子域名、主域名、端口号中任意一个不相同时，都算作不同域。不同域之间相互请求资源，就算作“跨域”。
+
+特别说明两点：
+
+- 第一：如果是协议和端口造成的跨域问题“前台”是无能为力的。
+- 第二：**在跨域问题上，仅仅是通过“URL的首部”来识别而不会根据域名对应的IP地址是否相同来判断**。“URL的首部”可以理解为“协议, 域名和端口必须匹配”。
+
+跨域并不是请求发不出去，请求能发出去，服务端能收到请求并正常返回结果，只是结果被浏览器拦截了。你可能会疑问明明通过表单的方式可以发起跨域请求，为什么 Ajax 就不会?因为归根结底，跨域是为了阻止用户读取到另一个域名下的内容，Ajax 可以获取响应，浏览器认为这不安全，所以拦截了响应。但是表单并不会获取新的内容，所以可以发起跨域请求。同时也说明了跨域并不能完全阻止 CSRF，因为请求毕竟是发出去了。
+
+
+
+
+
 #### 为什么要区分简单和非简单请求
 
 1、因为浏览器认为简单请求是安全的，所以可以通过跨域限制到达服务器，也就没必要对简单请求做预检请求（人家本来就可以通过跨域你预检个什么）
