--- a/面试学习题目/前端面试_22_业务场景.md
+++ b/面试学习题目/前端面试_22_业务场景.md
@@ -2754,3 +2754,81 @@ api.fetch = function (url, data, option) {
 问题 4：**如果某个分块的上传请求失败了，怎么办？**
 
 一旦服务端某个上传请求失败，会返回当前分块失败的信息，其中会包含文件名称、文件 hash、分块大小以及分块序号等，前端拿到这些信息后可以进行重传，同时考虑此时是否需要将 Promise.all 替换为 Promise.allSettled 更方便.
+
+
+
+----
+
+## 怎么实现一个扫描二维码登录PC网站的需求？
+
+**二维码登录本质**
+
+二维码登录本质上也是一种登录认证方式。既然是登录认证，要做的也就两件事情：
+
+- 告诉系统我是谁
+- 向系统证明我是谁
+
+**扫描二维码登录的一般步骤**
+
+- 扫码前，手机端应用是已登录状态，PC端显示一个二维码，等待扫描
+- 手机端打开应用，扫描PC端的二维码，扫描后，会提示"已扫描，请在手机端点击确认"
+- 用户在手机端点击确认，确认后PC端登录就成功了
+
+**具体流程**
+
+**生成二维码**
+
+- PC端向服务端发起请求，告诉服务端，我要生成用户登录的二维码，并且把PC端设备信息也传递给服务端
+- 服务端收到请求后，它生成**二维码ID**，并将二维码ID与PC端设备信息进行绑定
+- 然后把二维码ID返回给PC端
+- PC端收到二维码ID后，生成二维码(二维码中肯定包含了ID)
+- 为了及时知道二维码的状态，**客户端在展现二维码后，PC端不断的轮询服务端，比如每隔一秒就轮询一次**，请求服务端告诉当前二维码的状态及相关信息，**或者直接使用websocket，等待在服务端完成登录后进行通知**
+
+**扫描二维码**
+
+- 用户用手机去扫描PC端的二维码，通过二维码内容取到其中的二维码ID
+- 再调用服务端API将移动端的身份信息与二维码ID一起发送给服务端
+- 服务端接收到后，它可以将身份信息与二维码ID进行绑定，**生成临时token。然后返回给手机端**
+- 因为PC端一直在轮询二维码状态，**所以这时候二维码状态发生了改变，它就可以在界面上把二维码状态更新为已扫描**
+
+**状态确认**
+
+- 手机端在接收到临时token后会弹出确认登录界面，用户点击确认时，手机端携带临时token用来调用服务端的接口，告诉服务端，我已经确认
+- 服务端收到确认后，**根据二维码ID绑定的设备信息与账号信息，生成用户PC端登录的token**
+- 这时候PC端的轮询接口，它就可以得知二维码的状态已经变成了"已确认"。**并且从服务端可以获取到用户登录的token**
+- 到这里，登录就成功了，后端PC端就可以用token去访问服务端的资源了
+
+
+
+----
+
+##  js 中的倒计时，怎么实现纠正偏差？
+
+在前端实现中我们一般通过 setTimeout 和 setInterval 方法来实现一个倒计时效果。但是使用这些方法会存在时间偏差的问题，这是由于 js 的程序执行机制造成的，setTimeout 和 setInterval 的作用是隔一段时间将回调事件加入到事件队列中，因此事件并不是立即执行的，它会等到当前执行栈为空的时候再取出事件执行，因此事件等待执行的时间就是造成误差的原因。
+
+一般解决倒计时中的误差的有这样两种办法：
+
+（1）第一种是通过前端定时向服务器发送请求获取最新的时间差，以此来校准倒计时时间。
+
+（2）第二种方法是前端根据偏差时间来自动调整间隔时间的方式来实现的。这一种方式首先是以 setTimeout 递归的方式来实现倒计时，然后通过一个变量来记录已经倒计时的秒数。每一次函数调用的时候，首先将变量加一，然后根据这个变量和每次的间隔时间，我们就可以计算出此时无偏差时应该显示的时间。然后将当前的真实时间与这个时间相减，这样我们就可以得到时间的偏差大小，因此我们在设置下一个定时器的间隔大小的时候，我们就从间隔时间中减去这个偏差大小，以此来实现由于程序执行所造成的时间误差的纠正。
+
+
+
+----
+
+##  怎么使用 js 实现拖拽功能？
+
+一个元素的拖拽过程，我们可以分为三个步骤:
+
+1. 第一步是鼠标按下目标元素
+2. 第二步是鼠标保持按下的状态移动鼠标
+3. 第三步是鼠标抬起，拖拽过程结束
+
+这三步分别对应了三个事件，mousedown 事件，mousemove 事件和 mouseup 事件。只有在鼠标按下的状态移动鼠标我们才会执行拖拽事件，因此我们**需要在 mousedown 事件中设置一个状态来标识鼠标已经按下**，然后**在 mouseup 事件中再取消这个状态**。
+
+在 mousedown 事件中我们首先应该判断，目标元素是否为拖拽元素，如果是拖拽元素，我们就设置状态并且保存这个时候鼠标的位置。然后在 mousemove 事件中，我们**通过判断鼠标现在的位置和以前位置的相对移动，来确定拖拽元素在移动中的坐标**。最后 mouseup 事件触发后，清除状态，结束拖拽事件。
+
+
+
+-----
+
