--- a/面试学习题目/重难点内容/异步类题目.md
+++ b/面试学习题目/重难点内容/异步类题目.md
@@ -413,6 +413,10 @@ promise2 Promise { <rejected>: Error: error!!! }
 
 ----
 
+
+
+----
+
 ## Promise中的then、catch、finally
 
 **总结：**
@@ -1051,9 +1055,874 @@ async1 end
 
 - 首先一进来是创建了两个函数的，我们先不看函数的创建位置，而是看它的调用位置
 - 发现`async1`函数被调用了，然后去看看调用的内容
-- 执行函数中的同步代码`async1 start`，之后碰到了`await`，它会阻塞`async1`后面代码的执行，因此会先去执行`async2`中的同步代码`async2`，然后跳出`async1`
-- 跳出`async1`函数后，执行同步代码`start`
-- 在一轮宏任务全部执行完之后，再来执行刚刚`await`后面的内容`async1 end`。
+- 执行函数中的同步代码`async1 start`，**之后碰到了`await`，它会阻塞`async1`后面代码的执行**，因此会先去执行`async2`中的同步代码`async2`，然后跳出`async1`
+- **跳出`async1`函数后，执行同步代码`start`**
+- 在一轮宏任务全部执行完之后，**再来执行刚刚`await`后面的内容`async1 end`**。
 
 
+
+可以理解为「紧跟着await后面的语句相当于放到了new Promise中，下一行及之后的语句相当于放在Promise.then中」。
+
+-----
+
+```js
+async function async1() {
+  console.log("async1 start");
+  // 原来代码
+  // await async2();
+  // console.log("async1 end");
+  
+  // 转换后代码
+  new Promise(resolve => {
+    console.log("async2")
+    resolve()
+  }).then(res => console.log("async1 end"))
+}
+async function async2() {
+  console.log("async2");
+}
+async1();
+console.log("start")
+
+/*
+async1 start
+async2
+start
+async1 end
+*/
+```
+
+将`await`转换为`Promise.then`的伪代码。转换后的伪代码和前面的执行结果是一样的。
+
+```js
+async function async1() {
+  console.log("async1 start");
+  new Promise(resolve => {
+    console.log('promise')
+  })
+  console.log("async1 end");
+}
+async1();
+console.log("start")
+
+/*
+async1 start
+promise
+async1 end
+start
+*/
+```
+
+可以看到`new Promise()`并不会阻塞后面的同步代码`async1 end`的执行。
+
+
+
+----
+
+```js
+async function async1() {
+  console.log("async1 start");
+  await async2();
+  console.log("async1 end");
+}
+async function async2() {
+  setTimeout(() => {
+    console.log('timer')
+  }, 0)
+  console.log("async2");
+}
+
+async1();
+console.log("start")
+
+/*
+async1 start
+async2
+start
+async1 end
+timer
+*/
+```
+
+没错，定时器始终还是最后执行的，它被放到下一条宏任务的延迟队列中。
+
+
+
+----
+
+```js
+async function async1() {
+  console.log("async1 start");
+  await async2();
+  console.log("async1 end");
+  setTimeout(() => {
+    console.log('timer1')
+  }, 0)
+}
+async function async2() {
+  setTimeout(() => {
+    console.log('timer2')
+  }, 0)
+  console.log("async2");
+}
+
+async1();
+setTimeout(() => {
+  console.log('timer3')
+}, 0)
+console.log("start")
+/*
+async1 start
+async2
+start
+async1 end
+timer2
+timer3
+timer1
+*/
+```
+
+定时器谁先执行，你只需要关注谁先被调用的以及延迟时间是多少，这道题中延迟时间都是`0`，所以只要关注谁先被调用的。。
+
+
+
+----
+
+```js
+async function fn () {
+  // return await 1234
+  // 等同于
+  return 123
+}
+fn().then(res => console.log(res))
+/*
+123
+*/
+```
+
+正常情况下，`async`中的`await`命令是一个`Promise`对象，返回该对象的结果。
+
+但如果不是`Promise`对象的话，就会直接返回对应的值，相当于`Promise.resolve()`
+
+
+
+----
+
+```js
+async function async1 () {
+  console.log('async1 start');
+  await new Promise(resolve => {
+    console.log('promise1')
+  })
+    // `await`后面的`Promise`是没有返回值的，也就是它的状态始终是`pending`状态
+  
+  console.log('async1 success');
+  return 'async1 end'
+}
+
+console.log('srcipt start')
+async1().then(res => console.log(res))
+console.log('srcipt end')
+/*
+srcipt start
+async1 start
+promise1
+srcipt end
+*/
+```
+
+在`async1`中`await`后面的`Promise`是没有返回值的，也就是它的状态始终是`pending`状态，因此相当于一直在`await`，`await`，`await`却始终没有响应。
+
+所以在`await`之后的内容是不会执行的，也包括`async1`后面的 `.then`。
+
+---
+
+```js
+async function async1 () {
+  console.log('async1 start');
+  await new Promise(resolve => {
+    console.log('promise1')
+    resolve('promise1 resolve')
+  }).then(res => console.log(res))
+  console.log('async1 success');
+  return 'async1 end'
+}
+
+console.log('srcipt start')
+async1().then(res => console.log(res))
+console.log('srcipt end')
+/*
+srcipt start
+async1 start
+promise1
+srcipt end
+promise1 resolve
+async1 success
+async1 end
+*/
+```
+
+现在`Promise`有了返回值了，因此`await`后面的内容将会被执行
+
+
+
+----
+
+```js
+async function async1 () {
+  console.log('async1 start');
+  await new Promise(resolve => {
+    console.log('promise1')
+    resolve('promise resolve')
+  })
+  console.log('async1 success');
+  return 'async1 end'
+}
+
+console.log('srcipt start')
+async1().then(res => {
+  console.log(res)
+})
+new Promise(resolve => {
+  console.log('promise2')
+  setTimeout(() => {
+    console.log('timer')
+  })
+})
+
+/*
+srcipt start
+async1 start
+promise1
+promise2
+async1 success
+async1 end
+timer
+*/
+```
+
+有一点需要注意的，在`async1`中的`new Promise`它的`resovle`的值和`async1().then()`里的值是没有关系的，很可能看到`resovle('promise resolve')`就会误以为是`async1().then()`中的返回值。
+
+
+
+----
+
+```js
+async function async1() {
+  console.log("async1 start");
+  await async2();
+  console.log("async1 end");
+}
+
+async function async2() {
+  console.log("async2");
+}
+
+console.log("script start");
+
+setTimeout(function() {
+  console.log("setTimeout");
+}, 0);
+
+async1();
+
+new Promise(function(resolve) {
+  console.log("promise1");
+  resolve();
+}).then(function() {
+  console.log("promise2");
+});
+console.log('script end')
+
+/*
+srcipt start
+async1 start
+async2
+promise1
+script end
+async1 end
+promise2
+setTimeout
+*/
+```
+
+注意宏任务微任务顺序，整体脚本是一个宏任务
+
+----
+
+```js
+async function testSometing() {
+  console.log("执行testSometing");
+  return "testSometing";
+}
+
+async function testAsync() {
+  console.log("执行testAsync");
+  return Promise.resolve("hello async");
+}
+
+async function test() {
+  console.log("test start...");
+  const v1 = await testSometing();
+  console.log(v1);
+  const v2 = await testAsync();
+  console.log(v2);
+  console.log(v1, v2);
+}
+
+test();
+
+var promise = new Promise(resolve => {
+  console.log("promise start...");
+  resolve("promise");
+});
+promise.then(val => console.log(val));
+
+console.log("test end...");
+
+/*
+test start...
+执行testSometing
+promise start...
+test end...
+testSometing
+执行testAsync
+promise
+hello async
+testSometing hello async
+*/
+```
+
+
+
+----
+
+## async处理错误
+
+在`async`中，如果 `await`后面的内容是一个异常或者错误。**如果在async函数中抛出了错误，则终止错误结果，不会继续向下执行。**
+
+```js
+async function async1 () {
+  await async2();
+  console.log('async1');
+  return 'async1 success'
+}
+async function async2 () {
+  return new Promise((resolve, reject) => {
+    console.log('async2')
+    reject('error')
+  })
+}
+async1().then(res => console.log(res))
+
+/*
+async2
+[UnhandledPromiseRejection: This error originated...
+*/
+```
+
+如果改为`throw new Error`也是一样的
+
+```js
+async function async1 () {
+  console.log('async1');
+  throw new Error('error!!!')
+  return 'async1 success'
+}
+async1().then(res => console.log(res))
+
+/*
+async1
+test.html:30 Uncaught (in promise) Error: error!!!
+*/
+```
+
+
+
+----
+
+如果想要使得错误的地方不影响`async`函数后续的执行的话，可以使用`try catch`
+
+```js
+async function async1 () {
+  try {
+    await Promise.reject('error!!!')
+  } catch(e) {
+    console.log(e)
+  }
+  console.log('async1');
+  return Promise.resolve('async1 success')
+}
+
+async1().then(res => console.log(res))
+console.log('script start')
+
+/*
+script start
+error!!!
+async1
+async1 success
+*/
+```
+
+或者你可以直接在`Promise.reject`后面跟着一个`catch()`方法
+
+```js
+async function async1 () {
+  // try {
+  //   await Promise.reject('error!!!')
+  // } catch(e) {
+  //   console.log(e)
+  // }
+  await Promise.reject('error!!!')
+    .catch(e => console.log(e))
+  console.log('async1');
+  return Promise.resolve('async1 success')
+}
+
+async1().then(res => console.log(res))
+console.log('script start')
+/*
+script start
+error!!!
+async1
+async1 success
+*/
+```
+
+
+
+----
+
+## 异步综合题
+
+```js
+const first = () => (new Promise((resolve, reject) => {
+    console.log(3);
+    let p = new Promise((resolve, reject) => {
+        console.log(7);
+        setTimeout(() => {
+            console.log(5);
+            resolve(6);
+            console.log(p)
+        }, 0)
+        resolve(1);
+    });
+    resolve(2);
+    p.then((arg) => {
+        console.log(arg);
+    });
+}));
+
+first().then((arg) => {
+    console.log(arg);
+});
+console.log(4);
+
+/*
+3
+7
+4
+1
+2
+5
+Promise { 1 }
+*/
+```
+
+过程分析：
+
+- 第一段代码定义的是一个函数，所以我们得看看它是在哪执行的，发现它在`4`之前，所以可以来看看`first`函数里面的内容了。
+- 函数`first`返回的是一个`new Promise()`，因此先执行里面的同步代码`3`
+- 接着又遇到了一个`new Promise()`，直接执行里面的同步代码`7`
+- 执行完`7`之后，在`p`中，遇到了一个定时器，先将它放到下一个宏任务队列里不管它，接着向下走
+- 碰到了`resolve(1)`，**这里就把`p`的状态改为了`resolved`**，且返回值为`1`，不过这里也先不执行
+- 跳出`p`，碰到了`resolve(2)`，这里的`resolve(2)`，**表示的是把`first`函数返回的那个`Promise`的状态改了**，也先不管它。
+- 然后碰到了`p.then`，将它加入本次循环的微任务列表，等待执行
+- 跳出`first`函数，遇到了`first().then()`，将它加入本次循环的微任务列表(`p.then`的后面执行)
+- 然后执行同步代码`4`
+- 本轮的同步代码全部执行完毕，查找微任务列表，发现`p.then`和`first().then()`，依次执行，打印出`1和2`
+- 本轮任务执行完毕了，发现还有一个定时器没有跑完，接着执行这个定时器里的内容，执行同步代码`5`
+- 然后又遇到了一个`resolve(6)`，它是放在`p`里的，**但是`p`的状态在之前已经发生过改变了，因此这里就不会再改变，也就是说`resolve(6)`相当于没任何用处**，因此打印出来的`p`为`Promise{<resolved>: 1}`。
+  
+
+---
+
+```js
+const async1 = async () => {
+  console.log('async1');
+  setTimeout(() => {
+    console.log('timer1')
+  }, 2000)
+  await new Promise(resolve => {
+    console.log('promise1')
+    // 一直处于pending
+  })
+  console.log('async1 end')
+  return 'async1 success'
+}
+
+console.log('script start');
+async1().then(res => console.log(res));
+console.log('script end');
+
+Promise.resolve(1)
+  .then(2)
+  .then(Promise.resolve(3))
+  .catch(4)
+  .then(res => console.log(res))
+  // then函数中的参数期待的是函数，如果不是函数的话会发生透传
+setTimeout(() => {
+  console.log('timer2')
+}, 1000)
+
+/*
+script start
+async1
+promise1
+script end
+1
+timer2
+timer1
+*/
+```
+
+- `async`函数中`await`的`new Promise`要是没有返回值的话则不执行后面的内容
+- `.then`函数中的参数期待的是函数，如果不是函数的话会发生透传
+- 注意定时器的延迟时间
+
+
+
+----
+
+```js
+const p1 = new Promise((resolve) => {
+  setTimeout(() => {
+    resolve('resolve3');
+    console.log('timer1')
+  }, 0)
+  resolve('resovle1');
+  resolve('resolve2');
+}).then(res => {
+  console.log(res)
+  setTimeout(() => {
+    console.log(p1)
+  }, 1000)
+}).finally(res => {
+  console.log('finally', res)
+})
+
+/*
+resovle1
+finally undefined
+timer1
+Promise { undefined }
+*/
+```
+
+注意的知识点：
+
+- `Promise`的状态一旦改变就无法改变
+- `finally`不管`Promise`的状态是`resolved`还是`rejected`都会执行，**且它的回调函数是接收不到`Promise`的结果的**，所以`finally()`中的`res`是一个迷惑项。
+- **最后一个定时器打印出的`p1`其实是`.finally`的返回值**，我们知道`.finally`的返回值如果在没有抛出错误的情况下默认会是上一个`Promise`的返回值, 而这道题中`.finally`上一个`Promise`是`.then()`，**但是这个`.then()`并没有返回值**，所以`p1`打印出来的`Promise`的**值会是`undefined`**，如果你在定时器的**下面**加上一个`return 1`，则值就会变成`1`
+
+
+
+----
+
+## 常见面试题
+
+### 使用Promise实现每隔1秒输出
+
+比较简单的一种做法是可以用`Promise`配合着`reduce`不停的在`promise`后面叠加`.then`
+
+```js
+const arr = [1, 2, 3, 4, 5];
+
+arr.reduce((pre, cur) => {
+    return pre.then(() => {
+        return new Promise(resolve => {
+            setTimeout(() => resolve(console.log(cur)), 1000);
+        });
+    });
+}, Promise.resolve());
+
+```
+
+
+
+----
+
+### 使用Promise实现红绿灯交替重复亮
+
+红灯3秒亮一次，黄灯2秒亮一次，绿灯1秒亮一次；如何让三个灯不断交替重复亮灯？（用Promise实现）三个亮灯函数已经存在：
+
+```js
+function red() {
+    console.log('red');
+}
+function green() {
+    console.log('green');
+}
+function yellow() {
+    console.log('yellow');
+}
+
+function light(timer, cb) {
+    return new Promise(resolve => {
+        setTimeout(() => {
+            cb();
+            resolve();
+        }, timer1);
+    });
+}
+
+function step() {
+    Promise.resolve().then(() => {
+        return light(3000, red);
+    }).then(() => {
+        return light(2000, yellow);
+    }).then(() => {
+        return light(1000, green);
+    }).then(() => {
+        return step();
+    });
+}
+
+step();
+```
+
+
+
+----
+
+### 实现mergePromise函数
+
+实现mergePromise函数，把传进去的数组按顺序先后执行，并且把返回的数据先后放到数组data中。
+
+有点类似于`Promise.all()`，不过`.all()`不需要管执行顺序，只需要并发执行就行了。但是这里需要等上一个执行完毕之后才能执行下一个。
+
+解题思路：
+
+- 定义一个数组`data`用于保存所有异步操作的结果
+- 初始化一个`const promise = Promise.resolve()`，然后循环遍历数组，在`promise`后面添加执行`ajax`任务，同时要将添加的结果重新赋值到`promise`上。
+
+```js
+const time = (timer) => {
+  return new Promise(resolve => {
+    setTimeout(() => {
+      resolve()
+    }, timer)
+  })
+}
+const ajax1 = () => time(2000).then(() => {
+  console.log(1);
+  return 1
+})
+const ajax2 = () => time(1000).then(() => {
+  console.log(2);
+  return 2
+})
+const ajax3 = () => time(1000).then(() => {
+  console.log(3);
+  return 3
+})
+
+function mergePromise (ajaxArray) {
+    // 
+    const result = [];  // 存放每个ajax的结果
+    let p = Promise.resolve();
+    ajaxArray.forEach(ajax => {
+    // 第一次的then为了用来调用ajax
+    // 第二次的then是为了获取ajax的结果
+    p = p.then(ajax).then(res => {
+        result.push(res);
+        return result;
+    });
+    });
+    // 最后得到的p的值就是data
+    return p;
+}
+
+mergePromise([ajax1, ajax2, ajax3]).then(data => {
+  console.log("done");
+  console.log(data); // data 为 [1, 2, 3]
+});
+
+// 要求分别输出
+// 1
+// 2
+// 3
+// done
+// [1, 2, 3]
+```
+
+
+
+----
+
+### 根据promiseA+实现一个自己的promise
+
+
+
+
+
+----
+
+## 封装一个异步加载图片的方法
+
+只需要在图片的`onload`函数中，使用`resolve`返回一下就可以了
+
+```js
+function loadImg(url) {
+  return new Promise((resolve, reject) => {
+    const img = new Image();
+    img.onload = function() {
+      console.log("一张图片加载完成");
+      resolve(img);
+    };
+    img.onerror = function() {
+    	reject(new Error('Could not load image at' + url));
+    };
+    img.src = url;
+  });
+```
+
+
+
+---
+
+##  限制异步操作的并发个数并尽可能快的完成全部
+
+有8个图片资源的url，已经存储在数组`urls`中。
+
+```
+urls`类似于`['https://image1.png', 'https://image2.png', ....]
+```
+
+而且已经有一个函数`function loadImg`，输入一个`url`链接，返回一个`Promise`，该`Promise`在图片下载完成的时候`resolve`，下载失败则`reject`。
+
+但有一个要求，任何时刻同时下载的链接**数量不可以超过3个**。
+
+请写一段代码实现这个需求，要求**尽可能快速**地将所有图片下载完成。
+
+```js
+var urls = [
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting1.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting2.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting3.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting4.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/AboutMe-painting5.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/bpmn6.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/bpmn7.png",
+  "https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/bpmn8.png",
+];
+function loadImg(url) {
+  return new Promise((resolve, reject) => {
+    const img = new Image();
+    img.onload = function() {
+      console.log("一张图片加载完成");
+      resolve(img);
+    };
+    img.onerror = function() {
+    	reject(new Error('Could not load image at' + url));
+    };
+    img.src = url;
+  });
+```
+
+看到这道题时，最开始的想法是：
+
+- 拿到`urls`，然后将这个数组每3个`url`一组创建成一个二维数组
+- 然后用`Promise.all()`每次加载一组`url`（也就是并发3个），这一组加载完再加载下一组。
+
+这个想法从技术上说并不难实现，有点类似于第三题。不过缺点也明显，那就是每次都要等到上一组全部加载完之后，才加载下一组，那如果上一组有`2`个已经加载完了，还有`1`个特别慢，还在加载，要等这个慢的也加载完才能进入下一组。这明显会照常卡顿，影响加载效率。
+
+```js
+function limitLoad (urls, handler, limit) {
+  const data = []; // 存储所有的加载结果
+  let p = Promise.resolve();
+  const handleUrls = (urls) => { // 这个函数是为了生成3个url为一组的二维数组
+    const doubleDim = [];
+    const len = Math.ceil(urls.length / limit); // Math.ceil(8 / 3) = 3
+    console.log(len) // 3, 表示二维数组的长度为3
+    for (let i = 0; i < len; i++) {
+      doubleDim.push(urls.slice(i * limit, (i + 1) * limit))
+    }
+    return doubleDim;
+  }
+  const ajaxImage = (urlCollect) => { // 将一组字符串url 转换为一个加载图片的数组
+    console.log(urlCollect)
+    return urlCollect.map(url => handler(url))
+  }
+  const doubleDim = handleUrls(urls); // 得到3个url为一组的二维数组
+  doubleDim.forEach(urlCollect => {
+    p = p.then(() => Promise.all(ajaxImage(urlCollect))).then(res => {
+      data.push(...res); // 将每次的结果展开，并存储到data中 (res为：[img, img, img])
+      return data;
+    })
+  })
+  return p;
+}
+limitLoad(urls, loadImg, 3).then(res => {
+  console.log(res); // 最终得到的是长度为8的img数组: [img, img, img, ...]
+  res.forEach(img => {
+    document.body.appendChild(img);
+  })
+});
+```
+
+
+
+既然题目的要求是保证每次并发请求的数量为3，那么我们可以先请求`urls`中的前面三个(下标为`0,1,2`)，并且请求的时候使用`Promise.race()`来同时请求，三个中有一个先完成了(例如下标为`1`的图片)，我们就把这个当前数组中已经完成的那一项(第`1`项)换成还没有请求的那一项(`urls`中下标为`3`)。
+
+直到`urls`已经遍历完了，然后将最后三个没有完成的请求(也就是状态没有改变的`Promise`)用`Promise.all()`来加载它们。
+
+```js
+function limitLoad(urls, handler, limit) {
+  let sequence = [].concat(urls); // 复制urls
+  // 这一步是为了初始化 promises 这个"容器"
+  let promises = sequence.splice(0, limit).map((url, index) => {
+    return handler(url).then(() => {
+      // 返回下标是为了知道数组中是哪一项最先完成
+      return index;
+    });
+  });
+  // 注意这里要将整个变量过程返回，这样得到的就是一个Promise，可以在外面链式调用
+  return sequence
+    .reduce((pCollect, url) => {
+      return pCollect
+        .then(() => {
+          return Promise.race(promises); // 返回已经完成的下标
+        })
+        .then(fastestIndex => { // 获取到已经完成的下标
+        	// 将"容器"内已经完成的那一项替换
+          promises[fastestIndex] = handler(url).then(
+            () => {
+              return fastestIndex; // 要继续将这个下标返回，以便下一次变量
+            }
+          );
+        })
+        .catch(err => {
+          console.error(err);
+        });
+    }, Promise.resolve()) // 初始化传入
+    .then(() => { // 最后三个用.all来调用
+      return Promise.all(promises);
+    });
+}
+
+limitLoad(urls, loadImg, 3)
+  .then(res => {
+    console.log("图片全部加载完毕");
+    console.log(res);
+  })
+  .catch(err => {
+    console.error(err);
+  });
+```
+
+
+
+----
 
