--- a/image/记录/前端笔试学习题目.md
+++ b/image/记录/前端笔试学习题目.md
@@ -1930,3 +1930,248 @@ let str = readline();
 console.log(solution(str));
 ```
 
+
+
+----
+
+### 超级玛丽过吊桥
+
+给定N个木板的吊桥，从吊桥一段的外侧开始跳(第0块)，一次可条1/2/3步，其中有一些木板是陷阱，踩到即消耗一点生命值并在陷阱原地复活，刚好跳到吊桥的另一侧(第N+1块)则通关。
+
+给定起始生命数量M(范围1-5)，吊桥长度N(范围1-32)，陷阱木板数量K(范围1-32)及K个陷阱木板的编号，求保证生命值大于0条件下所有可能的通关路线数量。
+
+```
+start | | o | ... | | o |o | |end
+```
+
+
+
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+    input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n');
+    /**
+     * 待实现函数，在此函数中填入答题代码
+     * doFunc()
+     */
+    let [M, N, K] = inputArray[0].split(" ").map(Number);
+    let L = inputArray[1].split(" ").map(Number);
+    console.log(solution(M, N, K, L));
+
+    process.exit();
+});
+
+// M 生命, N 吊桥长度，K 缺失木板数，L 缺失编号
+function solution(M, N, K, L) {
+    const lack = new Set(L);
+    let ans = 0;
+    
+    const dfs = (start, N, m, lack) => {
+        // start是当前处于的位置
+        if (start === N + 1) {
+            // 刚好到达 N + 1, 则满足一种方式
+            ans++;
+            return;
+        }
+
+        let newM = m;  // 跳到当前位置时的生命值
+        if (lack.has(start)) {
+            // 如果当前位置属于陷阱，则生命值减一
+            newM--;
+        }
+        if (newM === 0) {
+            // 如果没有生命值了，则该方式不满足
+            return;
+        }
+        for (let step = 1; step < 4; step++) {
+            // 从当前位置跳1-3步到下一个位置
+            if (start + step <= N + 1) {
+                dfs(start + step, N, newM, lack);
+            } else {
+                break;
+            }
+        }
+    }
+    dfs(0, N, M, lack);
+
+    return ans;
+}
+
+let M = 3, N = 30, K = 8;
+let L = [2, 3, 6, 8, 9, 12, 18, 26];
+
+console.log(solution(M, N, K, L));
+
+```
+
+
+
+- 定义状态转移数组`dp[N+2][M+2]`，`dp[i][j]`表示到达位置i，剩余生命值j的方法数
+- 用`bridge[i]`存储陷阱
+- 状态转移方程`dp[i][j] = dp[i-1][k] + dp[i-2][k] + dp[i-3][k]`，若`bridge[i]`为陷阱，则`k=j+1`，表示i-1位置到达i位置后需要花费一条命，则需要比i位置多一条命，若bridge[i]不是陷阱，则k=j。j从1到M，最少也有一条命，最多有M条命。
+- 初始化：`dp[0][M] = 1`，在初始位置有M条命，方法数为1
+- 结果`res=sum(dp[N+1][0~M])`
+
+```js
+// M 生命, N 吊桥长度，K 缺失木板数，L 缺失编号
+function solution(M, N, K, L) {
+    const bridge = new Array(N + 2).fill(true);  // // 记录陷阱
+    L.forEach((item) => {
+        bridge[item] = false;
+    });
+    
+    // dp[i][j]表示到达位置i，剩余生命值为j的方法数
+    const dp = new Array(N + 2).fill(0).map((item) => new Array(M + 2).fill(0));
+    // 初始化dp,在初始位置，剩余生命值为M
+    dp[0][M] = 1;
+
+    for (let i = 1; i < N + 2; i++) {
+        for (let j = 1; j < M + 1; j++) {
+            // 如果当前位置为陷阱，则需要上一位置多一条命，到当前位置扣一条命
+            let k = bridge[i] === false ? (j + 1) : j;
+            if (i === 1) {
+                dp[i][j] = dp[i - 1][k];
+            } else if (i === 2) {
+                dp[i][j] = dp[i - 1][k] + dp[i - 2][k];
+            } else {
+                dp[i][j] = dp[i - 1][k] + dp[i - 2][k] + dp[i - 3][k];
+            }
+        }
+    }
+
+    // dp[N+1][0~M]相加
+    let ans = 0;
+    for (let i = 0; i < M + 1; i++) {
+        ans += dp[N + 1][i];
+    }
+
+    return ans;
+}
+
+let M = 3, N = 30, K = 8;
+let L = [2, 3, 6, 8, 9, 12, 18, 26];
+
+console.log(solution(M, N, K, L));
+```
+
+
+
+----
+
+### 多通道传输文件
+
+m个通道发n个文件,可以同时发送,通道有大小,文件有大小,耗时, 求发送完所有文件最小耗时
+
+先发耗时最大的文件,找一个最空闲的并且大于文件的通道发送
+
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+    input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n');
+    /**
+     * 待实现函数，在此函数中填入答题代码
+     * doFunc()
+     */
+    let [M, N] = inputArray[0].split(" ").map(Number);
+    let P = inputArray[1].split(" ").map(Number);
+    let Q = inputArray[2].split(" ").map(Number);
+    let S = inputArray[3].split(" ").map((item, index) => [Number(item), index]);
+    console.log(solution(M, N, P, Q, S));
+
+    process.exit();
+});
+
+// M 队列长度，N 传输通道数，P 每个通道大小
+// Q 每个数据包大小，S 每个数据包传输时长
+function  solution(M, N, P, Q, S) {
+    if (N === 1) {
+        return S.reduce((pre, cur) => pre + cur);
+    }
+    let minCost = 0;
+    
+    P = P.sort((a, b) => a - b);
+    S = S.map((item, index) => [item, index]);
+    S = S.sort((a, b) => b[0] - a[0]);
+    console.log(S);
+
+    const dp = new Array(N).fill(0);
+
+    for (let i = 0; i < M; i++) {
+        let flag = false;
+        let minIndex = 0;
+        for (let j = 0; j < N; j++) {
+            if (!flag && P[j] >= Q[S[i][1]]) {
+                flag = true;
+                minIndex = j;
+            }
+            if (flag) {
+                if (dp[j] === 0) {
+                    minIndex = j;
+                    // dp[j] += S[i][0];
+                    // minCost = Math.max(minCost, dp[j]);
+                    break;
+                }
+                if (dp[j] < dp[minIndex]) {
+                    minIndex = j;
+                }
+            }
+        }
+        dp[minIndex] += S[i][0];
+        minCost = Math.max(minCost, dp[minIndex]);
+    }
+    return minCost;
+}
+
+let [M, N] = [6, 3];
+let P = [1, 2, 4];
+let Q = [2, 3, 2, 4, 1, 3];
+let S = [3, 4, 1, 5, 3, 2];
+
+console.log(solution(M, N, P, Q, S));
+```
+
+
+
+### 最佳路由问题
+
+ip寻址, 有ttl限制,求从发送路由到接收路由的最短路径
+
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+    input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n');
+    /**
+     * 待实现函数，在此函数中填入答题代码
+     * doFunc()
+     */
+    let [N, startID, endID, TTL] = inputArray[0].split(" ").map(Number);
+    let edges = [];
+    for (let i = 1; i < inputArray.length; i++) {
+        edges.push(inputArray[i].split(" ").map(Number));
+    }
+    console.log(solution(edges, N, startID, endID, TTL));
+
+    process.exit();
+});
+
+function solution(edges, N, startID, endID, TTL) {
+    return TTL - 4;
+}
+
+```
+
