--- a/面试学习题目/前端面试_13_性能优化部分.md
+++ b/面试学习题目/前端面试_13_性能优化部分.md
@@ -582,3 +582,20 @@ Source map 想必大家都不陌生。线上的代码多是压缩后的，如果
 
 
 一般来说 source map 的应用都是在监控系统中，开发者构建完应用后，通过插件将源代码及 source map 上传至平台中。一旦客户端上报错误后，我们就可以通过[该库](https://github.com/mozilla/source-map)来还原源代码的报错位置（具体 API 看文档即可），方便开发者快速定位线上问题。
+
+
+
+---
+
+## base64编码图片，为什么会让数据量变大？
+
+Base64编码的思想是是采用64个基本的ASCII码字符对数据进行重新编码。它将需要编码的数据拆分成字节数组。以3个字节为一组。按顺序排列24位数据，再把这24位数据分成4组，即每组6位。再在每组的的最高位前补两个0凑足一个字节。这样就把一个3字节为一组的数据重新编码成了4个字节。当所要编码的数据的字节数不是3的整倍数，也就是说在分组时最后一组不够3个字节。这时在最后一组填充1到2个0字节。并在最后编码完成后在结尾添加1到2个"="。
+
+（ 注BASE64字符表：ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/）
+
+从以上编码规则可以得知，**通过Base64编码，原来的3个字节编码后将成为4个字节，即字节增加了33.3%**，数据量相应变大。所以20M的数据通过Base64编码后大小大概为20M*133.3%=26.67M。
+
+
+
+----
+
