--- a/面试学习题目/前端面试_16_前端安全部分.md
+++ b/面试学习题目/前端面试_16_前端安全部分.md
@@ -80,6 +80,30 @@
 
 
 
+#### 浏览器为什么要有跨域限制？
+
+因为存在浏览器同源策略，所以才会有跨域问题。那么浏览器是出于何种原因会有跨域的限制呢。其实不难想到，跨域限制主要的目的就是为了用户的上网安全。
+
+如果浏览器没有同源策略，会存在什么样的安全问题呢。下面从 DOM 同源策略和 XMLHttpRequest 同源策略来举例说明：
+
+**如果没有 DOM 同源策略**，也就是说不同域的 iframe 之间可以相互访问，那么黑客可以这样进行攻击：
+
+- 做一个假网站，里面用 iframe 嵌套一个银行网站 [http://mybank.com。](http://mybank.com./)
+- 把 iframe 宽高啥的调整到页面全部，这样用户进来除了域名，别的部分和银行的网站没有任何差别。
+- 这时如果用户输入账号密码，我们的主网站可以跨域访问到 [http://mybank.com](http://mybank.com/) 的 dom 节点，就可以拿到用户的账户密码了。
+
+**如果没有 XMLHttpRequest 同源策略**，那么黑客可以进行 CSRF（跨站请求伪造） 攻击：
+
+- 用户登录了自己的银行页面 [http://mybank.com，http://mybank.com](http://mybank.com%2Chttp//mybank.com) 向用户的 cookie 中添加用户标识。
+- 用户浏览了恶意页面 [http://evil.com，执行了页面中的恶意](http://evil.xn--com%2C-3f5flsr81h88am2fh56et41bf3ybe6c/) AJAX 请求代码。
+- [http://evil.com](http://evil.com/) 向 [http://mybank.com](http://mybank.com/) 发起 AJAX HTTP 请求，请求会默认把 [http://mybank.com](http://mybank.com/) 对应 cookie 也同时发送过去。
+- 银行页面从发送的 cookie 中提取用户标识，验证用户无误，response 中返回请求数据。此时数据就泄露了。
+- 而且由于 Ajax 在后台执行，用户无法感知这一过程。
+
+因此，有了浏览器同源策略，我们才能更安全的上网。
+
+
+
 #### 常见跨域场景
 
 当协议、子域名、主域名、端口号中任意一个不相同时，都算作不同域。不同域之间相互请求资源，就算作“跨域”。
@@ -91,7 +115,14 @@
 
 跨域并不是请求发不出去，请求能发出去，服务端能收到请求并正常返回结果，只是结果被浏览器拦截了。你可能会疑问明明通过表单的方式可以发起跨域请求，为什么 Ajax 就不会?因为归根结底，跨域是为了阻止用户读取到另一个域名下的内容，Ajax 可以获取响应，浏览器认为这不安全，所以拦截了响应。但是表单并不会获取新的内容，所以可以发起跨域请求。同时也说明了跨域并不能完全阻止 CSRF，因为请求毕竟是发出去了。
 
+它的核心就在于它认为自任何站点装载的信赖内容是不安全的。当被浏览器半信半疑的脚本运行在沙箱时，它们应该只被允许访问来自同一站点的资源，而不是那些来自其它站点可能怀有恶意的资源。
 
+所谓同源是指：**域名**、**协议**、**端口**相同。
+
+另外，同源策略又分为以下两种：
+
+- **DOM 同源策略**：禁止对不同源页面 DOM 进行操作。这里主要场景是 iframe 跨域的情况，不同域名的 iframe 是限制互相访问的。
+- **XMLHttpRequest 同源策略**：禁止使用 XHR 对象向不同源的服务器地址发起 HTTP 请求。
 
 
 
