--- a/面试学习题目/前端面试_4_ES6部分.md
+++ b/面试学习题目/前端面试_4_ES6部分.md
@@ -3327,7 +3327,7 @@ for (let x of f) {
 理解到的遍历、迭代的关系：遍历就是访问数据结构的所有元素，而迭代是遍历的一种形式。
 
 ```js
-// 阮一峰 ECMAScript 6 入门
+
 // 模拟next方法返回值
 var it = makeIterator(['a', 'b']);
 
@@ -4678,7 +4678,7 @@ let [foo, bar] = await Promise.all([getFoo(), getBar()]);
 
 ### Promise
 
-> Promise 对象是一个代理对象（代理一个值），被代理的值在Promise对象创建时可能是未知的。它允许你为异步操作的成功和失败分别绑定相应的处理方法（handlers）。 这让异步方法可以像同步方法那样返回值，但并不是立即返回最终执行结果，而是一个能代表未来出现的结果的promise对象
+**Promise 对象是一个代理对象（代理一个值）**，被代理的值在Promise对象创建时可能是未知的。它允许你为异步操作的成功和失败分别绑定相应的处理方法（handlers）。 这让异步方法可以像同步方法那样返回值，但并不是立即返回最终执行结果，而是一个能代表未来出现的结果的promise对象
 
 ### async/await
 
@@ -4692,11 +4692,121 @@ async/await中的return/throw会代理自己返回的Promise的resolve/reject，
   - return 一个字面量则会得到一个{PromiseStatus: resolved}的Promise。
   - throw 一个Error则会得到一个{PromiseStatus: rejected}的Promise。
 - 如果方法内**有await节点**
-  - async会返回一个{PromiseStatus: pending}的Promise（发生切换，异步等待Promise的执行结果）。
+  - async会返回一个{PromiseStatus: pending}的Promise（**发生切换，异步等待Promise的执行结果**）。
   - Promise的resolve会使得await的代码节点获得相应的返回结果，并继续向下执行。
   - Promise的reject 会使得await的代码节点自动抛出相应的异常，终止向下继续执行。
 
 
+
+-----
+
+##  forEach 中能否使用 await ？
+
+```js
+function test() {
+  let arr = [3, 2, 1];
+  arr.forEach(async (item) => {
+    const res = await fetch(item);
+    console.log(res);
+  });
+  console.log("end");
+}
+
+function fetch(x) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      resolve(x);
+    }, 500 * x);
+  });
+}
+
+test();
+
+/*
+end
+1
+2
+3
+*/
+```
+
+其实原因很简单，那就是 forEach 只支持同步代码。
+
+我们可以参考下 Polyfill 版本的 forEach，简化以后类似就是这样的伪代码
+
+```js
+while (index < arr.length) {
+	callback(item, index)   //也就是我们传入的回调函数
+}
+```
+
+从上述代码中我们可以发现**，forEach 只是简单的执行了下回调函数而已**，并不会去处理异步的情况。 并且即使你在 callback 中使用 break 也并不能结束遍历。
+
+
+
+一般来说解决的办法有2种：
+
+- for...of
+
+因为 for...of 内部处理的机制和 forEach 不同，forEach 是直接调用回调函数**，for...of 是通过迭代器的方式去遍历**。
+
+```js
+async function test() {
+  let arr = [3, 2, 1];
+  for (const item of arr) {
+    const res = await fetch(item);
+    console.log(res);
+  }
+  console.log("end");
+}
+
+function fetch(x) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      resolve(x);
+    }, 500 * x);
+  });
+}
+
+test();
+
+/*
+3
+2
+1
+end
+*/
+```
+
+- for循环
+
+```js
+async function test() {
+  let arr = [3, 2, 1];
+  for (var i = 0; i < arr.length; i++) {
+    const res = await fetch(arr[i]);
+    console.log(res);
+  }
+  console.log("end");
+}
+
+function fetch(x) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      resolve(x);
+    }, 500 * x);
+  });
+}
+
+test();
+
+/*
+3
+2
+1
+end
+*/
+```
 
 
 
@@ -5750,4 +5860,21 @@ null`转为数值时，值为`0` 。`undefined`转为数值时，值为`NaN
 
 
 ----
+
+## “严格模式”是什么？
+
+除了正常运行模式，ECMAscript 5添加了第二种运行模式："严格模式"（strict mode）。顾名思义，这种模式使得Javascript在更严格的条件下运行。
+
+设立"严格模式"的目的，主要有以下几个：
+
+```
+- 消除Javascript语法的一些不合理、不严谨之处，减少一些怪异行为;
+- 消除代码运行的一些不安全之处，保证代码运行的安全；
+- 提高编译器效率，增加运行速度；
+- 为未来新版本的Javascript做好铺垫。
+```
+
+"严格模式"体现了Javascript更合理、更安全、更严谨的发展方向，包括IE 10在内的主流浏览器，都已经支持它，许多大项目已经开始全面拥抱它。
+
+另一方面，同样的代码，在"严格模式"中，可能会有不一样的运行结果；一些在"正常模式"下可以运行的语句，在"严格模式"下将不能运行。掌握这些内容，有助于更细致深入地理解Javascript，让你变成一个更好的程序员。
 
