--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -2709,3 +2709,52 @@ window.requestAnimationFrame(step);
 
 第七步的 RIC 事件不是每一帧结束都会执行，**只有在一帧的 16.6ms 中做完了前面 6 件事儿且还有剩余时间，才会执行**。如果一帧执行结束后还有时间执行 RIC 事件，那么下一帧需要在事件执行结束才能继续渲染，**所以 RIC 执行不要超过 30ms，如果长时间不将控制权交还给浏览器，会影响下一帧的渲染**，导致页面出现卡顿和事件响应不及时。
 
+
+
+----
+
+## 谈谈你对浏览器中进程和线程的理解
+
+**浏览器是多进程的**
+
+它主要包括以下进程：
+
+- Browser 进程：浏览器的主进程，唯一，负责创建和销毁其它进程、网络资源的下载与管理、浏览器界面的展示、前进后退等。
+- GPU 进程：用于 3D 绘制等，最多一个。
+- 第三方插件进程：每种类型的插件对应一个进程，仅当使用该插件时才创建。
+- 浏览器渲染进程（浏览器内核）：内部是多线程的，每打开一个新网页就会创建一个进程，主要用于页面渲染，脚本执行，事件处理等。
+
+**渲染进程（浏览器内核）**
+
+浏览器的渲染进程是**多线程的**，页面的渲染，JavaScript 的执行，事件的循环，都在这个进程内进行：
+
+- **GUI 渲染线程**：负责渲染浏览器界面，当界面需要重绘（Repaint）或由于某种操作引发回流(Reflow)时，该线程就会执行。
+- **JavaScript 引擎线程**：也称为 JavaScript 内核，负责处理 Javascript 脚本程序、解析 Javascript 脚本、运行代码等。（例如 V8 引擎）
+- **事件触发线程**：用来控制浏览器事件循环，注意这不归 JavaScript 引擎线程管，当事件被触发时，该线程会把事件添加到待处理队列的队尾，等待 JavaScript 引擎的处理。
+- **定时触发器线程**：传说中的 setInterval 与 setTimeout 所在线程，注意，W3C 在 HTML 标准中规定，规定要求 setTimeout 中低于 4ms 的时间间隔算为 4ms 。
+- **异步 http 请求线程**：在 XMLHttpRequest 连接后通过浏览器新开一个线程请求，将检测到状态变更时，如果设置有回调函数，异步线程就产生状态变更事件，将这个回调再放入事件队列中。再由 JavaScript 引擎执行。
+
+注意，GUI 渲染线程与 JavaScript 引擎线程是互斥的，当 JavaScript 引擎执行时 GUI 线程会被挂起（相当于被冻结了），GUI 更新会被保存在一个队列中等到 JavaScript 引擎空闲时立即被执行。所以如果 JavaScript 执行的时间过长，这样就会造成页面的渲染不连贯，导致页面渲染加载阻塞。
+
+**单线程的 JavaScript**
+
+所谓单线程，是指在 JavaScript 引擎中负责解释和执行 JavaScript 代码的线程唯一，同一时间上只能执行一件任务。
+
+
+
+----
+
+## 为什么JavaScript是单线程？
+
+JavaScript语言的一大特点就是单线程，也就是说，同一个时间只能做一件事。那么，为什么JavaScript不能有多个线程呢？这样能提高效率啊。
+
+JavaScript的单线程，与它的用途有关。作为浏览器脚本语言，JavaScript的主要用途是与用户互动，以及操作DOM。这决定了它只能是单线程，否则会带来很复杂的同步问题。比如，假定JavaScript同时有两个线程，一个线程在某个DOM节点上添加内容，另一个线程删除了这个节点，这时浏览器应该以哪个线程为准？
+
+所以，为了避免复杂性，从一诞生，JavaScript就是单线程，这已经成了这门语言的核心特征，将来也不会改变。
+
+为了利用多核CPU的计算能力，HTML5提出Web Worker标准，允许JavaScript脚本创建多个线程，但是子线程完全受主线程控制，且不得操作DOM。所以，这个新标准并没有改变JavaScript单线程的本质。
+
+
+
+----
+
