--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1271,11 +1271,15 @@ new Promise((resolve, reject) => {
 
 判断输入字符串的格式
 
+```
 
+```
 
 找到迷宫礼物的最短路径
 
+```
 
+```
 
 
 
@@ -1326,7 +1330,7 @@ console.log(5);
 
 ----
 
-## 8.26 猿辅导
+## 8.26 猿辅导笔试
 
 求所有数组中都出现的元素
 
@@ -1753,7 +1757,7 @@ var sleep = (delaytime = 1000) => {
 
 ----
 
-## 8.31 度小满
+## 8.31 度小满笔试
 
 
 
@@ -1915,11 +1919,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -1963,7 +1969,7 @@ console.log(solution(n));
 
 ----
 
-## 8.31 广联达
+## 8.31 广联达笔试
 
 一些科学家在研究X粒子的特性，通常情况下，X粒子在经过加速装置后拥有的速度均为V，但是加热后，某些粒子的特性发生了变化，在相同情况下经过加速装置后拥有的速度变得大于V了（变化后的速度不一定相同），于是科学家们决定研究这些特别的粒子。
 
@@ -3195,4 +3201,112 @@ console.log(solution(1234567890));
 
 
 ----
+
+## 9.20 美的面试
+
+群面，讨论如何做一个即时通讯系统
+
+
+
+----
+
+## 9.20 小米笔试
+
+```js
+Number.MIN_VALUE > 0  // true
+```
+
+
+
+```js
+var one = 0.1;
+var two = 0.2;
+var six = 0.6;
+var eight = 0.8;
+
+console.log(two - one == one, eight - six == two);  // true false
+console.log(two - one);  // 0.1
+console.log(eight - six);  // 0.20000000000000007
+```
+
+计算给定字符能够构成的最长回文串
+
+```js
+function solution(str) {
+    const n = str.length;
+    if (n < 2) {
+        return n;
+    }
+    const m = new Map();
+    for (let i = 0; i < n; i++) {
+        m.set(str[i], m.has(str[i]) ? m.get(str[i]) + 1 : 1);
+    }
+    let ans = 0;
+    let flag = false;
+    for (let [key, val] of m) {
+        ans += val
+        if (val % 2 === 1) {
+            flag = true;
+            ans -= 1;
+        }
+    }
+    if (flag) {
+        ans += 1;
+    }
+    return ans;
+}
+
+// let str = "abccccdd";
+let str = readline().trim();
+console.log(solution(str));
+```
+
+
+
+给定石头位置，能否跳到最后一步，第一步必需跳到1， 在当前位置只能跳k - 1, k, k + 1步，只能往前跳。
+
+```js
+
+function solution(stones) {
+    const n = stones.length;
+    const m = stones[n - 1];
+    if (stones[1] !== 1) {
+        //第一步必需跳1
+        return false;
+    }
+    const dp = new Array(m + 1).fill(false);
+    for (let i = 0; i < n; i++) {
+        dp[stones[i]] = true;
+    }
+
+    let k = 1;
+    let flag = false;
+    const dfs = (start, k) => {
+        if (flag) {
+            return;
+        }
+        if (start === m) {
+            flag = true;
+            return;
+        }
+        if (dp[start]) {
+            for (let i = -1; i < 2; i++) {
+                if (k + i > 0) {
+                    let newStart = start + k + i;
+                    if (newStart <= m) {
+                        dfs(newStart, k + i);
+                    }
+                }
+            }
+        }
+    }
+
+    dfs(1, 1);
+    return flag;
+}
+
+// let stones = [0, 1, 3, 5, 6, 8, 12, 17];
+let stones = readline().trim().split(" ").map(Number);
+console.log(solution(stones));
+```
 
