--- a/面试学习题目/前端面试_16_前端安全部分.md
+++ b/面试学习题目/前端面试_16_前端安全部分.md
@@ -1215,6 +1215,7 @@ SELECT * FROM users WHERE name='aaa'
 
 - i）后台进行输入验证，对敏感字符过滤。
 - ii）使用参数化查询，能避免拼接SQL，就不要拼接SQL语句。
+- 对访问数据库的Web应用程序采用Web应用防火墙
 
 **如何防范SQL注入**？
 
